package projectphase1;


public abstract class User {
    String username;
    String password;
    String role ="";

}
